[package]
name = "audio_graph"
description = "A digital audio signal processing graph. Forked from dasp_graph"
version = "0.1.0"
authors = ["Oliver Frank <oliverfrank321@gmail.com>", "mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "audio", "graph", "pcm", "audio"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
dasp = { version = "0.11", features = ["all"] }
petgraph = { version = "0.5", default-features = false }
web-sys = { version = "0.3.60", features = ["console"] }

[dev-dependencies]
petgraph = { version = "0.5", features = ["stable_graph"] }
