[package]
name = "audio_graph"
description = "A digital audio signal processing graph. Forked from dasp_graph"
version = "0.1.0"
authors = ["Oliver Frank <oliverfrank321@gmail.com>", "mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "audio", "graph", "pcm", "audio"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
dasp = { version = "0.11", features = ["all"] }
petgraph = { git = "https://github.com/ofrank123/petgraph.git", features = ["stable_graph"] }
web-sys = { version = "0.3.60", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "6.1", features = ["serde-compat"] }