[package]
name = "audio_graph"
description = "A digital audio signal processing graph. Forked from dasp_graph"
version = "0.1.0"
authors = ["Oliver Frank <oliverfrank321@gmail.com>", "mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "audio", "graph", "pcm", "audio"]
edition = "2018"

[dependencies]
petgraph = { git = "https://github.com/ofrank123/petgraph.git", features = ["stable_graph"] }
web-sys = { version = "0.3.60", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "6.1", features = ["serde-compat"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
getrandom = { version = "0.2", features = ["js"] }
